@@ -606,6 +606,7 @@
       <class name="test.dataprovider.IndicesTest" />
       <class name="test.dataprovider.DataProviderTest"/>
       <class name="test.dataprovider.InterceptorTest"/>
+      <class name="test.dataprovider.issue3237.CacheTest"/>
     </classes>
   </test>
 
